# demoterm

./: .gitignore  pyproject.toml
demoterm/: __main__.py
